added fetching api
